--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div id="vis"></div>
+<div id="stacked_bar_chart"></div>
 
 <script type="text/javascript">
   var spec = "https://github.com/shlokthakur1/FIT3179/Homework/js/symbol_map.json";
