--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div id="symbol_map"></div>
 
 <script type="text/javascript">
-  var spec = "https://github.com/shlokthakur1/FIT3179/Homework/js/symbol_map.json";
-  vegaEmbed('#vis', spec).then(function(result) {
+  var spec = "Homework/js/symbol_map.json";
+  vegaEmbed('#symbol_map', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
