--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Multiple Visualisations | An Example</title>
+    <title>Global Terrorism Visualization</title>
     <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
@@ -213,6 +213,12 @@
         </div>
         <!-- end pure grid group -->
 
+            <div class="pure-g">
+      <div class="pure-u-1-1 small-font">
+        <p>This visualization is created by <a href="https://github.com/shlokthakur1" target="_blank">Shlok Thakur</a>. The data source is <a href="#" target="https://www.kaggle.com/START-UMD/gtd">Global Terrorism Database</href>.</p>
+      </div>
+    </div>
+        
     </div> <!-- end page -->
 
     <script type="text/javascript">
